--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <img src="img/logo.png" alt="Trillo logo" class="logo">
 
       <form class="search" action="#">
-        <input type="text" class="search_input" placeholder="Search hotels">
+        <input type="text" class="search__input" placeholder="Search hotels">
         <button class="search__button">
           <svg class="search__icon">
             <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
