--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <div class="overview">
           <h1 class="overview__heading">
-            Hotel Hululu Lu
+            Hotel Las Plamas
           </h1>
           <div class="overview__stars">
             <svg class="overview__icon-star">
